[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["aorticweb <aorticweb@aorticweb.com>"]
packages = [
    {include = "libs"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
python-dotenv = "1.0.0"
black = "^23.1.0"
pydantic-factories = "^1.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
