[tool.poetry]
name = "atcmoney-cli"
version = "0.1.0"
description = "cli for atcmoney701"
authors = ["aorticweb <aorticweb@aorticweb.com>"]
packages = [{include = "atcmoney_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
libs = { path = "../", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atcmoney = "atcmoney_cli.main:cli"